# i_am_learning_rust

./: .gitignore  README.md  jokenpo.rs  tree.rs
actix-web-one/: Cargo.toml
actix-web-one/src/: main.rs
actix-web-template/: Cargo.toml
actix-web-template/src/: main.rs
actix-web-template/templates/: index.html  user.html
enums/: Cargo.toml
enums/src/: main.rs
guess/: .gitignore  Cargo.toml
guess/src/: main.rs
iron-gcd/: Cargo.toml
iron-gcd/src/: main.rs
list_comprehension/: Cargo.toml
list_comprehension/src/: main.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
structs/: Cargo.toml
structs/src/: main.rs
sugar/: Cargo.toml
sugar/src/: main.rs
trait_bounds/: Cargo.toml
trait_bounds/src/: main.rs
traits/: Cargo.toml
traits/src/: main.rs
types_and_impls/: Cargo.toml
types_and_impls/src/: main.rs
wasm-greet/: Cargo.toml  build.sh  index.js  package-lock.json  wasm_greet.js  wasm_greet_bg.wasm
web_ui_testing/: Cargo.toml
web_ui_testing/src/: main.rs
